# interloper

./: .gitmodules  Dockerfile  Podfile  README.md  build-gdal.sh  build-gdal_combined.sh  build-gdal_sim.sh  build-gtiff_sim.sh  build-libiconv.sh  build-proj.sh  build-proj_combined.sh  build-proj_sim.sh  build-sqlite.sh  build-sqlite_combined.sh  build-sqlite_sim.sh  build-tiff_sim.sh  build_gdal_sim.sh  shit.txt
.github/workflows/: build_frameworks.yml  build_gdal.yml  build_gdal_combined.yml  build_gdal_sim.yml  build_lerc_sim.yml  build_prep.yml  build_prep_sim.yml  build_thicc.yml
artifacts/gdal-ios-build/lib/cmake/gdal/: GDAL-targets.cmake  GDALConfig.cmake  GDALConfigVersion.cmake
artifacts/gdal-ios-build/lib/cmake/proj/: proj-config.cmake  proj4-targets.cmake
artifacts/gdal-ios-build/lib/cmake/proj4/: proj-targets.cmake
artifacts/gdal-ios-build/lib/pkgconfig/: gdal.pc
artifacts/gdal-ios-sim-build/include/: cpl_config.h
artifacts/gdal-ios-sim-build/lib/cmake/gdal/: GDAL-targets.cmake  GDALConfig.cmake
artifacts/gdal-ios-sim-build/lib/cmake/proj4/: proj4-config.cmake
artifacts/gdal-ios-sim-build/lib/pkgconfig/: gdal.pc  proj.pc
artifacts/sqlite-proj-ios-arm64-build/cmake/: SQLite3Config.cmake
artifacts/sqlite-proj-ios-arm64-build/lib/pkgconfig/: proj.pc
artifacts/sqlite-proj-ios-simulator-build/lib/cmake/proj/: proj-targets.cmake
artifacts/xcFrameworks/gdal-xcframework/: Info.plist
artifacts/xcFrameworks/proj-xcframework/: Info.plist
artifacts/xcFrameworks/sqlite3-xcframework/: Info.plist
cmake/: CMakeLists.txt  README.md
(+3 files in other folders)
